# advent-of-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
aoc/: __main__.py  input.py
aoc/2020/: day1.py  day2.py  day3.py  day4.py
tests/: test_aoc.py
tests/samples/2020/: 4.txt
