[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code solutions in Python"
authors = ["Michael Moussa <michael.moussa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
rich = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.9.2"
pytest = "^6.1.2"

[tool.poetry.scripts]
aoc = "aoc.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
